# sepulcas

./: .gitignore  CMakeLists.txt  file_lock.h  file_storage.h  main.cpp  sepulca.h  sepulca_id.h  storage.h
